--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
                 <a href="none1"></a>
                 <a href="https://www.instagram.com/marvel/" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://www.youtube.com/marvel" target="_blank"><i class='bx bxl-youtube'></i></a>
-                <a href="https://twitter.com/marvel"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.facebook.com/Marvel/"><i class='bx bxl-facebook-square'></i></a>
+                <a href="https://twitter.com/marvel" target="_blank"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.facebook.com/Marvel/" target="_blank"><i class='bx bxl-facebook-square'></i></a>
                 <a href="none2"></a>
             </article>
         </div>
